--- a/main.html
+++ b/main.html
@@ -7,7 +7,28 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>Kyoto, Japan</h1>
+
+    <br>
+
+    <p>Kyoto is the cultural heart of Japan, serving as the country's capital for over a thousand years. It is a city where modern life blends seamlessly with the past, famous for its thousands of classical Buddhist temples, breathtaking gardens, imperial palaces, Shinto shrines, and traditional wooden houses known as machiya. It offers a serene atmosphere that changes beautifully with every season, from the cherry blossoms in spring to the vibrant maple leaves in autumn.</p>
+
+    <h3>Top 5 Attractions</h3>
+    <ol>
+        <li>Hike through the thousands of vermilion torii gates at <strong>Fushimi Inari Taisha</strong>.</li>
+        <li>Admire the stunning reflection of the <em>Kinkaku-ji</em> (The Golden Pavilion) on the pond.</li>
+        <li>Walk through the towering stalks of the <strong>Arashiyama Bamboo Grove</strong>.</li>
+        <li>Enjoy the panoramic view of the city from the wooden stage of <em>Kiyomizu-dera Temple</em>.</li>
+        <li>Explore the historic streets of the <strong>Gion District</strong> to spot a real Geisha.</li>
+    </ol>
+
+    <h3>Must-Try Foods</h3>
+    <ul>
+        <li><strong>Kaiseki Ryori</strong>: A traditional multi-course Japanese dinner that represents the pinnacle of Japanese haute cuisine.</li>
+        <li><em>Matcha Sweets</em>: Kyoto is famous for high-quality green tea, used in ice creams, parfaits, and cakes.</li>
+        <li><strong>Yudofu</strong>: A simple yet elegant boiled tofu dish, often served in temple restaurants.</li>
+        <li><em>Yatsuhashi</em>: The city's most famous souvenir confection, made from glutinous rice flour and cinnamon.</li>
+    </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
