--- a/main.html
+++ b/main.html
@@ -15,11 +15,11 @@
 
     <h3>Top 5 Attractions</h3>
     <ol>
-        <li>Hike through the thousands of vermilion torii gates at <strong>Fushimi Inari Taisha</strong>.</li>
-        <li>Admire the stunning reflection of the <em>Kinkaku-ji</em> (The Golden Pavilion) on the pond.</li>
-        <li>Walk through the towering stalks of the <strong>Arashiyama Bamboo Grove</strong>.</li>
-        <li>Enjoy the panoramic view of the city from the wooden stage of <em>Kiyomizu-dera Temple</em>.</li>
-        <li>Explore the historic streets of the <strong>Gion District</strong> to spot a real Geisha.</li>
+        <li>Hike through the thousands of vermilion torii gates at <b>Fushimi Inari Taisha</b>.</li>
+        <li>Admire the stunning reflection of the <i>Kinkaku-ji</i> (The Golden Pavilion) on the pond.</li>
+        <li>Walk through the towering stalks of the <b>Arashiyama Bamboo Grove</b>.</li>
+        <li>Enjoy the panoramic view of the city from the wooden stage of <i>Kiyomizu-dera Temple</i>.</li>
+        <li>Explore the historic streets of the <b>Gion District</b> to spot a real Geisha.</li>
     </ol>
 
     <h3>Must-Try Foods</h3>
